<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ResultTextView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:autoSizeMinTextSize="50sp"
            android:autoSizeMaxTextSize="112sp"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical|end"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="112sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mPlusButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#a6a6a6"
                android:text="@string/MPlus"
                android:textColor="#3C3C3C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#a6a6a6"
                android:text="@string/M"
                android:textColor="#3C3C3C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#a6a6a6"
                android:text="@string/C"
                android:textColor="#3C3C3C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ceButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#a6a6a6"
                android:text="@string/CE"
                android:textColor="#3C3C3C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FF9D0C"
                android:text="@string/Plus"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n7Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N7" />

            <Button
                android:id="@+id/n8Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N8" />

            <Button
                android:id="@+id/n9Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N9" />

            <Button
                android:id="@+id/potButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#333333"
                android:text="@string/POT"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FF9D0C"
                android:text="@string/Minus"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n4Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N4" />

            <Button
                android:id="@+id/n5Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N5" />

            <Button
                android:id="@+id/n6Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N6" />

            <Button
                android:id="@+id/rootButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#333333"
                android:text="@string/Root"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/multiplyButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FF9D0C"
                android:text="@string/Multiply"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n1Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N1" />

            <Button
                android:id="@+id/n2Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N2" />

            <Button
                android:id="@+id/n3Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N3" />

            <Button
                android:id="@+id/modButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#333333"
                android:text="@string/Mod"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divideButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FF9D0C"
                android:text="@string/Divide"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n0Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/N0" />

            <Button
                android:id="@+id/dotButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Dot" />

            <Button
                android:id="@+id/plusMinusButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#333333"
                android:text="@string/PlusMinus"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/offButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#a6a6a6"
                android:text="@string/Off"
                android:textColor="#3C3C3C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equalButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FF9D0C"
                android:text="@string/Equal"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>